--- a/src/BRBackendDemo/views/admin-index.html
+++ b/src/BRBackendDemo/views/admin-index.html
@@ -12,8 +12,8 @@
   <link rel="icon" type="image/png" href="/i/favicon.png">
   <link rel="apple-touch-icon-precomposed" href="/i/app-icon72x72@2x.png">
   <meta name="apple-mobile-web-app-title" content="Amaze UI" />
-  <link rel="stylesheet" href="/css/amazeui.min.css"/>
-  <link rel="stylesheet" href="/css/admin.css">
+  <link rel="stylesheet" href="/static/css/amazeui.min.css"/>
+  <link rel="stylesheet" href="/static/css/admin.css">
 </head>
 <body>
 <!--[if lte IE 9]>
