--- a/src/github.com/csrgxtu/qiniudemo/reset.css
+++ b/src/github.com/csrgxtu/qiniudemo/reset.css
@@ -48,7 +48,7 @@ table {
 	width: 100%;
 	height: auto;
 	text-align: center;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 }
 
 
@@ -59,7 +59,7 @@ h1{
 	line-height: 1.8em;
 	text-align: center;
 	padding: 0 20px;
-	margin-bottom: 20px;
+	margin-bottom: 0;
 }
 
 /*作者*/
@@ -68,7 +68,7 @@ h1{
 	font-size: 13px;
 	text-align: center;
 	padding: 0 20px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 
 
